bin/testsuite/tests/compiler/src/errors/compiler4318.swg
#global testerror "Err0172"
struct(T) A {}

//#global testerror
//#global skip
#test
{
    var x: A'func(a: s32)
}
